02-infra/wave-50-repos/53-gitlab/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitlab
  namespace: gitlab-system
spec:
  host: "gitlab.apps.rosa.<path:secret/data/rosa-domain#domain>"
  path: /
  to:
    name: gitlab-webservice-default
    weight: 100
    kind: Service
  port:
    targetPort: http-workhorse
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
